--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@ let lastClickedMarker = null;
 
 /* 🔴 여기 추가 */
 const ROUTE_GPX_FILES = [
-  "routes/patrol_2025-11-24_minimal.gpxpatrol_2025-11-24_minimal.gpx",
+  "routes/patrol_2025-11-24_minimal.gpx",
   "routes/route2.gpx"
 ];
 let gpxLayerGroup; // GPX 레이어 묶음
@@ -416,6 +416,7 @@ document.addEventListener("DOMContentLoaded", ()=>{
 </script>
 </body>
 </html>
+
 
 
 
