--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@ let lastClickedMarker = null;
 /* 🔴 여기 추가 */
 const ROUTE_GPX_FILES = [
   "routes/patrol_2025-11-24_minimal.gpx",
-  "routes/20260201191546-89077-data_minimal.gpx"
+  "routes/ge_park.gpx"
 ];
 let gpxLayerGroup; // GPX 레이어 묶음
 /* 🔴 여기까지 */
@@ -416,6 +416,7 @@ document.addEventListener("DOMContentLoaded", ()=>{
 </script>
 </body>
 </html>
+
 
 
 
