--- a/index.html
+++ b/index.html
@@ -315,7 +315,8 @@ document.getElementById("copyRouteBtn").addEventListener("click",()=>{
 function normalizeSimple(str){
   return (str||"")
     .toLowerCase()
-    .replace(/[\s\-\_\.,\/\(\)\[\]#]/g,"");
+    // ✅ 숫자/영문/한글만 남기고 나머지는 전부 제거 (ㅡ 포함)
+    .replace(/[^0-9a-z가-힣]/g,"");
 }
 
 /* ===== 여기부터 추가 ===== */
@@ -480,6 +481,7 @@ document.addEventListener("DOMContentLoaded", ()=>{
 </script>
 </body>
 </html>
+
 
 
 
