--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+  <!DOCTYPE html>
 <html lang="ko">
 <head>
 <meta charset="utf-8" />
@@ -236,39 +236,61 @@ function initMap(){
     .on("loaded", function (e) {
       const gpx = e.target;
 
-      // ✅ GPX 내 레이어들 중 Marker만 골라서 index에 저장
-      gpx.eachLayer(layer => {
-        if (layer instanceof L.Marker) {
+      // ✅ (선택) 매번 누적되면 중복될 수 있으니, 필요 시 초기화
+      // gpxWptIndex = [];
 
-          // ✅ 추가: popup 내용에서도 name 추출 (leaflet-gpx 일부 케이스 대응)
-          const popupContent =
-            (layer.getPopup && layer.getPopup() && layer.getPopup().getContent()) || "";
+      // ✅ 1) 가장 확실한 방법: Leaflet-GPX가 파싱한 waypoint 목록 사용
+      if (typeof gpx.get_waypoints === "function") {
+        const wpts = gpx.get_waypoints() || [];
 
-          const popupText = String(popupContent).replace(/<[^>]*>/g, ""); // HTML 제거
+        wpts.forEach(w => {
+          // w.marker: Leaflet 마커
+          // w.name / w.desc: GPX <name>, <desc> 등
+          if (w && w.marker) {
+            const name = String(w.name || w.desc || "").trim();
 
-          // Leaflet-GPX는 wpt marker에 _name 같은 값을 붙여두는 경우가 많음
-          // 안전하게 여러 후보를 체크
-          const name =
-            layer._name ||
-            (layer.feature &&
-              layer.feature.properties &&
-              (layer.feature.properties.name || layer.feature.properties.desc)) ||
-            (layer.getTooltip && layer.getTooltip() && layer.getTooltip().getContent()) ||
-            popupText ||  // ✅ 여기서 popupText 사용
-            "";
+            gpxWptIndex.push({
+              name,
+              marker: w.marker
+            });
+          }
+        });
 
-          gpxWptIndex.push({
-            name: String(name || "").trim(),
-            marker: layer
-          });
-        }
-      });
-    })  
+      } else {
+        // ✅ 2) 보험: get_waypoints()가 없는 버전이면 기존 방식으로 추출 시도
+        gpx.eachLayer(layer => {
+          if (layer instanceof L.Marker) {
+
+            // popup 내용에서도 name 추출 (leaflet-gpx 일부 케이스 대응)
+            const popupContent =
+              (layer.getPopup && layer.getPopup() && layer.getPopup().getContent()) || "";
+
+            const popupText = String(popupContent).replace(/<[^>]*>/g, ""); // HTML 제거
+
+            const name =
+              layer._name ||
+              (layer.feature &&
+                layer.feature.properties &&
+                (layer.feature.properties.name || layer.feature.properties.desc)) ||
+              (layer.getTooltip && layer.getTooltip() && layer.getTooltip().getContent()) ||
+              popupText ||
+              "";
+
+            gpxWptIndex.push({
+              name: String(name || "").trim(),
+              marker: layer
+            });
+          }
+        });
+      }
+
+      // ✅ 디버그(원하면 유지): 실제로 name이 들어오는지 확인
+      // console.log("GPX WPT index:", gpxWptIndex.length, gpxWptIndex.slice(0, 10));
+    })
     .on("error", function () {
       console.warn("GPX 로드 실패:", url);
     })
     .addTo(gpxLayerGroup);
-  });
 
 
   map.on("click", e=>{
@@ -500,6 +522,7 @@ document.addEventListener("DOMContentLoaded", ()=>{
 </script>
 </body>
 </html>
+
 
 
 
