--- a/index.html
+++ b/index.html
@@ -238,43 +238,85 @@ function initMap(){
     .on("loaded", function (e) {
       const gpx = e.target;
 
-      // ✅ 1) 가장 확실: waypoint 목록 사용
+      // ✅ (선택) GPX가 여러 개면 누적될 수 있음 (원하면 파일별로 중복 제거 로직 추가 가능)
+      // gpxWptIndex = [];
+
+      // ✅ WPT 이름을 "최대한 많이" 건져오는 헬퍼 (leaflet-gpx 버전/구조 차이 대응)
+      function extractNameFromMarker(marker) {
+        if (!marker) return "";
+
+        const popupContent =
+          (marker.getPopup && marker.getPopup() && marker.getPopup().getContent()) || "";
+        const popupText = String(popupContent).replace(/<[^>]*>/g, "").trim();
+
+        const tooltipContent =
+          (marker.getTooltip && marker.getTooltip() && marker.getTooltip().getContent()) || "";
+        const tooltipText = String(tooltipContent).replace(/<[^>]*>/g, "").trim();
+
+        const fromFeature =
+          (marker.feature &&
+            marker.feature.properties &&
+            (marker.feature.properties.name ||
+              marker.feature.properties.desc ||
+              marker.feature.properties.cmt)) || "";
+
+        return String(
+          marker._name ||
+          marker.options?.title ||
+          fromFeature ||
+          tooltipText ||
+          popupText ||
+          ""
+        ).trim();
+      }
+
+      // ✅ 1) get_waypoints()가 있으면, 거기서 먼저 추출
       if (typeof gpx.get_waypoints === "function") {
         const wpts = gpx.get_waypoints() || [];
+
         wpts.forEach(w => {
-          if (w && w.marker) {
-            const name = String(w.name || w.desc || "").trim();
-            gpxWptIndex.push({
-              name,
-              marker: w.marker
-            });
-          }
-        });
-      } else {
-        // ✅ 2) 보험: marker 순회로 추출
-        gpx.eachLayer(layer => {
-          if (layer instanceof L.Marker) {
-            const popupContent =
-              (layer.getPopup && layer.getPopup() && layer.getPopup().getContent()) || "";
-            const popupText = String(popupContent).replace(/<[^>]*>/g, "");
+          // leaflet-gpx 버전에 따라 w.marker가 없을 수도 있어 "방어적으로"
+          const marker = w && (w.marker || w._marker || w);
 
-            const name =
-              layer._name ||
-              (layer.feature &&
-                layer.feature.properties &&
-                (layer.feature.properties.name || layer.feature.properties.desc)) ||
-              (layer.getTooltip && layer.getTooltip() && layer.getTooltip().getContent()) ||
-              popupText ||
-              "";
+          // w 자체에 name/desc/cmt가 들어가는 버전도 있어서 다 체크
+          const name = String(
+            (w && (w.name || w.desc || w.cmt || w.text)) ||
+            extractNameFromMarker(marker) ||
+            ""
+          ).trim();
 
-            gpxWptIndex.push({
-              name: String(name || "").trim(),
-              marker: layer
-            });
+          if (marker && marker instanceof L.Marker) {
+            gpxWptIndex.push({ name, marker });
           }
         });
       }
+
+      // ✅ 2) 혹시 위에서 하나도 안 들어왔다면(또는 일부 누락), 레이어를 추가로 훑어서 보강
+      // (중복 방지를 위해 "같은 좌표+이름"이면 스킵)
+      const existed = new Set(
+        gpxWptIndex.map(x => {
+          const ll = x.marker.getLatLng();
+          return `${x.name}|${ll.lat.toFixed(6)},${ll.lng.toFixed(6)}`;
+        })
+      );
+
+      gpx.eachLayer(layer => {
+        if (layer instanceof L.Marker) {
+          const name = extractNameFromMarker(layer);
+
+          const ll = layer.getLatLng();
+          const key = `${name}|${ll.lat.toFixed(6)},${ll.lng.toFixed(6)}`;
+          if (!existed.has(key)) {
+            existed.add(key);
+            gpxWptIndex.push({ name, marker: layer });
+          }
+        }
+      });
+
+      // ✅ 디버그 원하면 1번만 확인:
+      // console.log("GPX WPT index count:", gpxWptIndex.length, gpxWptIndex.slice(0, 20));
     })
+
     .on("error", function () {
       console.warn("GPX 로드 실패:", url);
     })
@@ -516,6 +558,7 @@ document.addEventListener("DOMContentLoaded", ()=>{
 </script>
 </body>
 </html>
+
 
 
 
