--- a/index.html
+++ b/index.html
@@ -235,11 +235,10 @@ function initMap(){
         }
       }
     })
-    .on("loaded", function (e) {
-      const gpx = e.target;
 
-      // ✅ (선택) GPX가 여러 개면 누적될 수 있음 (원하면 파일별로 중복 제거 로직 추가 가능)
-      // gpxWptIndex = [];
+    /* ✅✅ 여기부터 교체 */
+      .on("loaded", function (e) {
+      const gpx = e.target;
 
       // ✅ WPT 이름을 "최대한 많이" 건져오는 헬퍼 (leaflet-gpx 버전/구조 차이 대응)
       function extractNameFromMarker(marker) {
@@ -270,58 +269,109 @@ function initMap(){
         ).trim();
       }
 
-      // ✅ 1) get_waypoints()가 있으면, 거기서 먼저 추출
+      // ✅ 중복 방지용 Set (name + lat,lng)
+      function makeKey(name, lat, lng) {
+        return `${String(name || "").trim()}|${Number(lat).toFixed(6)},${Number(lng).toFixed(6)}`;
+      }
+
+      const existed = new Set(
+        gpxWptIndex
+          .filter(x => x && x.marker && x.marker.getLatLng)
+          .map(x => {
+            const ll = x.marker.getLatLng();
+            return makeKey(x.name, ll.lat, ll.lng);
+          })
+      );
+
+      // ✅ 0) 먼저 현재 gpx 레이어에서 "마커들"을 lat,lng로 맵핑(나중에 XML name 붙이기용)
+      const markerByLatLng = new Map();
+      gpx.eachLayer(layer => {
+        if (layer instanceof L.Marker) {
+          const ll = layer.getLatLng();
+          markerByLatLng.set(`${ll.lat.toFixed(6)},${ll.lng.toFixed(6)}`, layer);
+
+          // 혹시라도 leaflet-gpx가 marker에 name을 넣어둔 케이스면 즉시 인덱싱
+          const n = extractNameFromMarker(layer);
+          if (n) {
+            const k = makeKey(n, ll.lat, ll.lng);
+            if (!existed.has(k)) {
+              existed.add(k);
+              gpxWptIndex.push({ name: n, marker: layer });
+            }
+          }
+        }
+      });
+
+      // ✅ 1) get_waypoints()가 있으면 거기서도 시도
       if (typeof gpx.get_waypoints === "function") {
         const wpts = gpx.get_waypoints() || [];
-
         wpts.forEach(w => {
-          // leaflet-gpx 버전에 따라 w.marker가 없을 수도 있어 "방어적으로"
           const marker = w && (w.marker || w._marker || w);
+          if (!(marker instanceof L.Marker)) return;
 
-          // w 자체에 name/desc/cmt가 들어가는 버전도 있어서 다 체크
+          const ll = marker.getLatLng();
           const name = String(
             (w && (w.name || w.desc || w.cmt || w.text)) ||
             extractNameFromMarker(marker) ||
             ""
           ).trim();
 
-          if (marker && marker instanceof L.Marker) {
+          if (!name) return;
+
+          const k = makeKey(name, ll.lat, ll.lng);
+          if (!existed.has(k)) {
+          existed.add(k);
             gpxWptIndex.push({ name, marker });
           }
         });
       }
 
-      // ✅ 2) 혹시 위에서 하나도 안 들어왔다면(또는 일부 누락), 레이어를 추가로 훑어서 보강
-      // (중복 방지를 위해 "같은 좌표+이름"이면 스킵)
-      const existed = new Set(
-        gpxWptIndex.map(x => {
-          const ll = x.marker.getLatLng();
-          return `${x.name}|${ll.lat.toFixed(6)},${ll.lng.toFixed(6)}`;
+      // ✅ 2) ★핵심★ GPX 원문(XML)을 직접 파싱해서 <wpt><name>을 확실히 인덱싱
+      // ✅ url은 forEach((url)=>{ ... })의 스코프 변수
+      fetch(url)
+        .then(r => r.text())
+        .then(xmlText => {
+          const parser = new DOMParser();
+          const xml = parser.parseFromString(xmlText, "application/xml");
+          if (xml.querySelector("parsererror")) return;
+
+          const wpts = Array.from(xml.getElementsByTagName("wpt"));
+          wpts.forEach(wpt => {
+            const lat = wpt.getAttribute("lat");
+            const lon = wpt.getAttribute("lon");
+            if (!lat || !lon) return;
+
+            const nameEl = wpt.getElementsByTagName("name")[0];
+            const name = String(nameEl ? nameEl.textContent : "").trim();
+            if (!name) return;
+
+            const lat6 = Number(lat).toFixed(6);
+            const lon6 = Number(lon).toFixed(6);
+
+            const marker = markerByLatLng.get(`${lat6},${lon6}`);
+            if (!(marker instanceof L.Marker)) return;
+
+            const k = makeKey(name, lat, lon);
+            if (!existed.has(k)) {
+              existed.add(k);
+              gpxWptIndex.push({ name, marker });
+            }
+          });
         })
-      );
+        .catch(() => {
+          // fetch 실패해도 기존 기능 유지 (조용히 무시)
+        });
 
-      gpx.eachLayer(layer => {
-        if (layer instanceof L.Marker) {
-          const name = extractNameFromMarker(layer);
-
-          const ll = layer.getLatLng();
-          const key = `${name}|${ll.lat.toFixed(6)},${ll.lng.toFixed(6)}`;
-          if (!existed.has(key)) {
-            existed.add(key);
-            gpxWptIndex.push({ name, marker: layer });
-          }
-        }
-      });
-
-      // ✅ 디버그 원하면 1번만 확인:
-      // console.log("GPX WPT index count:", gpxWptIndex.length, gpxWptIndex.slice(0, 20));
+      // console.log("GPX WPT index:", gpxWptIndex.length, gpxWptIndex.slice(0, 20));
     })
+    /* ✅✅ 여기까지 교체 */
 
     .on("error", function () {
       console.warn("GPX 로드 실패:", url);
     })
     .addTo(gpxLayerGroup);
-  }); // ✅✅✅ 이 닫는 줄이 반드시 필요합니다!
+  });
+
 
   // ✅ 이건 forEach 밖에서 실행돼야 함
   map.on("click", e=>{
@@ -558,6 +608,7 @@ document.addEventListener("DOMContentLoaded", ()=>{
 </script>
 </body>
 </html>
+
 
 
 
