--- a/index.html
+++ b/index.html
@@ -18,10 +18,6 @@
   #copyRouteBtn { width: 90%; max-width: 350px; background: #ff9800; color: white; border: none; padding: 8px; border-radius: 5px; cursor: pointer; }
   #completeBtn { background: #28a745; color: white; border: none; padding: 10px; border-radius: 5px; font-size: 16px; cursor: pointer; width: 90%; max-width: 350px; margin: 10px auto; display: block; }
   #navigateBtn { background:#007bff; color:white; border:none; padding:10px; border-radius:5px; font-size:16px; cursor:pointer; width:90%; max-width:350px; margin:10px auto; display:block; }
-  .gpx-original-hidden {
-    opacity: 0 !important;
-    pointer-events: none !important;
-  }
   #upcomingPanel { position: fixed; top: 10px; right: 10px; width: 250px; max-height: 60vh; overflow-y: auto; background: rgba(255,255,255,0.95); border: 1px solid #007bff; border-radius: 5px; padding: 10px; font-size: 14px; z-index: 9999; box-shadow: 2px 2px 5px rgba(0,0,0,0.2); transition: all 0.3s ease; cursor: pointer; }
   #upcomingPanel h4 { margin: 0 0 5px; font-size: 16px; color: #007bff; }
   #upcomingList { list-style: none; padding: 0; margin: 0; }
@@ -299,11 +295,7 @@ function initMap(){
           const ll = layer.getLatLng();
           markerByLatLng.set(`${ll.lat.toFixed(6)},${ll.lng.toFixed(6)}`, layer);
 
-          layer.setOpacity(0);
-          const el = layer.getElement();
-          if (el) el.classList.add("gpx-original-hidden");
-          else setTimeout(() => layer.getElement()?.classList.add("gpx-original-hidden"), 0);
-      
+          // 혹시라도 leaflet-gpx가 marker에 name을 넣어둔 케이스면 즉시 인덱싱
           const n = extractNameFromMarker(layer);
           if (n) {
             const k = makeKey(n, ll.lat, ll.lng);
@@ -674,5 +666,3 @@ document.addEventListener("DOMContentLoaded", ()=>{
 </script>
 </body>
 </html>
-
-
