--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
   #upcomingPanel.hidden { width: 50px; height: 40px; padding: 5px; overflow: hidden; cursor: pointer; }
   #upcomingPanel.hidden h4, #upcomingPanel.hidden ul { display: none; }
   #upcomingPanel.hidden::after { content: "⏰"; position: absolute; top: 10px; left: 15px; font-size: 20px; color: #007bff; }
+  .gpx-original-hidden { opacity: 0 !important; pointer-events: none !important; }
 </style>
 <script src="lampData.js"></script>
 <script src="patrolSchedule.js"></script>
@@ -666,3 +667,4 @@ document.addEventListener("DOMContentLoaded", ()=>{
 </script>
 </body>
 </html>
+
