--- a/index.html
+++ b/index.html
@@ -301,7 +301,9 @@ function initMap(){
           const ll = layer.getLatLng();
           markerByLatLng.set(`${ll.lat.toFixed(6)},${ll.lng.toFixed(6)}`, layer);
 
-          // 혹시라도 leaflet-gpx가 marker에 name을 넣어둔 케이스면 즉시 인덱싱
+          const el = layer.getElement && layer.getElement();
+          if (el) el.classList.add("gpx-original-hidden"); 
+    
           const n = extractNameFromMarker(layer);
           if (n) {
             const k = makeKey(n, ll.lat, ll.lng);
@@ -672,6 +674,7 @@ document.addEventListener("DOMContentLoaded", ()=>{
 </script>
 </body>
 </html>
+
 
 
 
