--- a/index.html
+++ b/index.html
@@ -301,9 +301,21 @@ function initMap(){
           const ll = layer.getLatLng();
           markerByLatLng.set(`${ll.lat.toFixed(6)},${ll.lng.toFixed(6)}`, layer);
 
-          const el = layer.getElement && layer.getElement();
-          if (el) el.classList.add("gpx-original-hidden"); 
-    
+          // ✅ (핵심) 기존 leaflet-gpx 마커 "완전 숨김"
+          layer.setOpacity(0);                 // 화면에서 100% 안 보이게
+          layer.options.interactive = false;   // 클릭/터치 막기
+          if (layer._icon) layer._icon.style.pointerEvents = "none";
+
+          // ✅ 혹시 DOM이 늦게 생기는 경우까지 커버(보험)
+          layer.on("add", () => {
+            layer.setOpacity(0);
+            layer.options.interactive = false;
+            if (layer._icon) layer._icon.style.pointerEvents = "none";
+            const el = layer.getElement && layer.getElement();
+            if (el) el.classList.add("gpx-original-hidden");
+          });
+
+          // (선택) 기존 인덱싱 로직을 유지하려면 아래는 그대로 둬도 됨
           const n = extractNameFromMarker(layer);
           if (n) {
             const k = makeKey(n, ll.lat, ll.lng);
@@ -314,6 +326,7 @@ function initMap(){
           }
         }
       });
+
 
       // ✅ 근처 마커 찾기 (좌표가 완전히 같지 않아도 매칭)
       function findNearestMarker(lat, lon) {
@@ -655,6 +668,7 @@ document.addEventListener("DOMContentLoaded", ()=>{
 </script>
 </body>
 </html>
+
 
 
 
