--- a/index.html
+++ b/index.html
@@ -323,10 +323,19 @@ function initMap(){
       );
 
       // ✅ 0) 먼저 현재 gpx 레이어에서 "마커들"을 lat,lng로 맵핑(나중에 XML name 붙이기용)
+      // ✅ 0) gpx 내부(중첩 포함) 모든 레이어를 재귀로 훑어서
+      //    - 마커는 markerByLatLng에 등록
+      //    - 기존 leaflet-gpx 마커는 "완전 숨김" 처리
       const markerByLatLng = new Map();
-      gpx.eachLayer(layer => {
+
+      function processLayerRecursive(layer) {
+        if (!layer) return;
+
+        // 1) 마커면: 인덱싱 + 숨김
         if (layer instanceof L.Marker) {
           const ll = layer.getLatLng();
+
+          // ✅ markerByLatLng 등록
           markerByLatLng.set(`${ll.lat.toFixed(6)},${ll.lng.toFixed(6)}`, layer);
 
           // ✅ (핵심) 기존 leaflet-gpx 마커 "완전 숨김"
@@ -334,7 +343,7 @@ function initMap(){
           layer.options.interactive = false;   // 클릭/터치 막기
           if (layer._icon) layer._icon.style.pointerEvents = "none";
 
-          // ✅ 혹시 DOM이 늦게 생기는 경우까지 커버(보험)
+          // ✅ DOM이 늦게 생기는 경우까지 커버(보험)
           layer.on("add", () => {
             layer.setOpacity(0);
             layer.options.interactive = false;
@@ -343,7 +352,7 @@ function initMap(){
             if (el) el.classList.add("gpx-original-hidden");
           });
 
-          // (선택) 기존 인덱싱 로직을 유지하려면 아래는 그대로 둬도 됨
+          // (선택) 기존 인덱싱 로직 유지: name 추출해서 gpxWptIndex에도 넣기
           const n = extractNameFromMarker(layer);
           if (n) {
             const k = makeKey(n, ll.lat, ll.lng);
@@ -352,8 +361,22 @@ function initMap(){
               gpxWptIndex.push({ name: n, marker: layer });
             }
           }
+
+          return; // ✅ 마커는 여기서 끝
         }
-      });
+
+        // 2) 그룹/GeoJSON/FeatureGroup 등: 하위 레이어 재귀 처리
+        if (typeof layer.eachLayer === "function") {
+          layer.eachLayer(child => processLayerRecursive(child));
+        }
+      }
+
+      // ✅ 실행: gpx 내부(중첩 포함) 전부 처리
+      processLayerRecursive(gpx);
+
+      // ✅ (보험) 로딩/렌더 타이밍 늦는 브라우저에서 한 번 더 숨김 적용
+      setTimeout(() => processLayerRecursive(gpx), 0);
+      setTimeout(() => processLayerRecursive(gpx), 200);
 
 
       // ✅ 근처 마커 찾기 (좌표가 완전히 같지 않아도 매칭)
@@ -696,6 +719,7 @@ document.addEventListener("DOMContentLoaded", ()=>{
 </script>
 </body>
 </html>
+
 
 
 
