--- a/index.html
+++ b/index.html
@@ -88,7 +88,8 @@ let lastClickedMarker = null;
 
 const ROUTE_GPX_FILES = [
   "routes/patrol_2025-11-24_minimal.gpx",
-  "routes/yaeyang_park_minimal.gpx"
+  "routes/yaeyang_park_minimal.gpx",
+  "routes/merged.gpx"
 ];
 let gpxLayerGroup; // GPX 레이어 묶음
 
@@ -779,6 +780,7 @@ document.addEventListener("DOMContentLoaded", ()=>{
 </script>
 </body>
 </html>
+
 
 
 
