--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@ let lastClickedMarker = null;
 
 const ROUTE_GPX_FILES = [
   "routes/patrol_2025-11-24_minimal.gpx",
-  "routes/계남공원2_minimal.gpx"
+  "routes/merged.gpx"
 ];
 let gpxLayerGroup; // GPX 레이어 묶음
 
@@ -779,6 +779,7 @@ document.addEventListener("DOMContentLoaded", ()=>{
 </script>
 </body>
 </html>
+
 
 
 
