--- a/index.html
+++ b/index.html
@@ -88,6 +88,7 @@ let lastClickedMarker = null;
 
 const ROUTE_GPX_FILES = [
   "routes/patrol_2025-11-24_minimal.gpx",
+   "routes/merged.gpx",
   "routes/merged_leaflet.gpx"
 ];
 let gpxLayerGroup; // GPX 레이어 묶음
@@ -779,6 +780,7 @@ document.addEventListener("DOMContentLoaded", ()=>{
 </script>
 </body>
 </html>
+
 
 
 
